# books-webapp

./: .pre-commit-config.yaml  Makefile  README.md  main.py  manage.py  pyproject.toml  pytest.ini
books/: models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_libro_unique_together.py
books_webapp/: asgi.py  settings.py  urls.py  wsgi.py
books_webapp/books_webapp/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: db.json  db2.json  importer.py
templates/books/: table.html
tests/integration/: test_XXX_scenario.py
