[project]
name = "books-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-extensions>=4.1",
    "pre-commit>=4.2.0",

]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.5", "requests>=2.32.3",
]
